# uefi-modules-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  REUSE.toml  rust-toolchain.toml
.github/workflows/: ci.yaml
LICENSES/: BSD-2-Clause.txt  OFL-1.1-RFN.txt
docs/: adding-packages.md  building.md  edk2-integration.md
tools/build-cfg/: Cargo.toml  README.md  REUSE.toml
tools/build-cfg/src/: lib.rs
tools/xtask/: REUSE.toml
tools/xtask/src/: build.rs  main.rs
uefi/system76-firmware-setup/: Cargo.toml  README.md  REUSE.toml  build.rs  module.inf
uefi/system76-firmware-setup/src/: display.rs  fde.rs  hii.rs  key.rs  main.rs  rng.rs  security.rs  ui.rs
uefi/system76-firmware-setup/src/image/: bmp.rs  mod.rs
uefi/system76-firmware-update/: Cargo.toml  README.md  REUSE.toml  build.rs
uefi/system76-firmware-update/res/: firmware.nsh
uefi/system76-firmware-update/src/: display.rs  dmi.rs  io.rs  key.rs  main.rs  text.rs
uefi/system76-firmware-update/src/app/: bios.rs  cmos.rs  component.rs  ec.rs  mapper.rs  mod.rs  pci.rs
uefi/system76-firmware-update/src/image/: bmp.rs  mod.rs
uefi/system76-gop-policy/: Cargo.toml  README.md  REUSE.toml  module.inf
uefi/system76-gop-policy/src/: gop_policy.rs  main.rs
