# SPDX-License-Identifier: GPL-3.0-only
# SPDX-FileCopyrightText: 2025 System76, Inc.

[workspace]
resolver = "2"
members = [
    "tools/build-cfg",
    "tools/xtask",
    "uefi/system76-firmware-setup",
    "uefi/system76-firmware-update",
    "uefi/system76-gop-policy",
]

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
publish = false
rust-version = "1.85.0"

[workspace.dependencies]
build-cfg = { path = "tools/build-cfg" }
# External crates
redox_uefi_std = "0.1.13"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
debug = true
lto = true
opt-level = 3
panic = "abort"
split-debuginfo = "packed"
#trim-paths = "all" # https://rust-lang.github.io/rfcs/3127-trim-paths.html

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
