# SPDX-License-Identifier: GPL-3.0-only
# SPDX-FileCopyrightText: 2025 System76, Inc.

[package]
name = "system76-firmware-setup"
version = "1.0.0"
description = "System76 firmware UI"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
memoffset.workspace = true
orbclient.workspace = true
orbfont = { workspace = true, features = ["no-std"] }
redox_uefi_std.workspace = true

[dependencies.system76_ectool]
git = "https://github.com/system76/ec.git"
default-features = false
features = ["redox_hwio"]

[build-dependencies]
build-cfg.workspace = true

[features]
default = []

[lints]
workspace = true
