# SPDX-License-Identifier: GPL-3.0-only
# SPDX-FileCopyrightText: 2025 System76, Inc.

[package]
name = "system76-firmware-update"
version = "1.0.0"
description = "System76 firmware update tool"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
redox_uefi_std.workspace = true
coreboot-fs = "0.1.1"
intel-spi = "0.1.5"
orbclient = { version = "0.3.46", default-features = false, features = ["unifont"] }
plain = "0.2.3"
redox_dmi = "0.1.6"
redox_hwio = { version = "0.1.6", default-features = false }
redox_intelflash = "0.1.3"
system76_ecflash = "0.1.3"

[dependencies.system76_ectool]
git = "https://github.com/system76/ec.git"
default-features = false
features = ["redox_hwio"]

[build-dependencies]
build-cfg.workspace = true

[lints]
workspace = true
