# SPDX-License-Identifier: GPL-3.0-only
# SPDX-FileCopyrightText: 2025 System76, Inc.

[package]
name = "system76-firmware-update"
version = "1.0.0"
description = "System76 firmware update tool"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
coreboot-fs.workspace = true
intel-spi.workspace = true
orbclient = { workspace = true, features = ["unifont"] }
plain.workspace = true
redox_dmi.workspace = true
redox_hwio.workspace = true
redox_intelflash.workspace = true
redox_uefi_std.workspace = true
system76_ecflash.workspace = true
system76_ectool = { workspace = true, features = ["redox_hwio"] }

[build-dependencies]
build-cfg.workspace = true

[lints]
workspace = true
