# SPDX-License-Identifier: GPL-3.0-only
# SPDX-FileCopyrightText: 2025 System76, Inc.

[package]
name = "system76-gop-policy"
version = "1.0.0"
description = "Platform GOP Policy"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
redox_uefi_std.workspace = true

[build-dependencies]
build-cfg.workspace = true

[lints]
workspace = true
